k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: blog-ingress
    namespace: blog
spec:
  ingressClassName: nginx
  rules:
      - http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                  service:
                    name: api-gateway
                    port:
                        number: 8080
